<resources>
    <string name="app_name">Brush-Whisperer</string>

    <!-- Login Screen -->
    <string name="default_web_client_id">475852833638-cfsjt9g6a7nmrp4ce2kakri01sdhs8kk.apps.googleusercontent.com</string>
    <string name="login">Login</string>
    <string name="sign_up">Sign Up</string>
    <string name="sign_in_with_google">Sign in with Google</string>
    <string name="skip">Skip</string>
    <string name="login_success">Login Success</string>
    <string name="login_failed">Login Failed</string>

    <!-- Signup Screen -->
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="email">EmailAdress</string>
    <string name="emailConfirm">Confirm your EmailAdress</string>
    <string name="passwordConfirm">Confirm your Password</string>
    <string name="Confirm">Confirm</string>
    <string name="Cancel">Cancel</string>
    <string name="signup_success">Signup Success</string>
    <string name="passwords_or_emails_do_not_match">Passwords or emails do not match</string>
    <!-- Navigation Drawer -->
    <string name="navigation_drawer_open">Open</string>
    <string name="navigation_drawer_close">Close</string>
    <!-- Home Screen -->
    <string name="whatsNew">Whats New ?</string>
    <string name="lastWishedColours">Last Wished Colours</string>
    <string name="welcome">"Welcome : "</string>
    <string name="guest">Guest</string>
    <string name="brands">Brands</string>
    <string name="colour_collection">Colour Collection</string>
    <string name="have_always_your_collection_with_you">Have always your Collection with you</string>
    <string name="projects">Projects</string>
    <string name="create_and_manage_your_projects">Create and manage your Projects</string>
    <string name="wishlist">Wishlist</string>
    <string name="all_your_missing_colours_in_one_place">All your Missing Colours in one place</string>
    <string name="error_adding_colour_to_wishlist">Error adding Colour to Wishlist</string>
    <string name="choose_youre_miniature">Choose youre Miniature</string>
    <string name="choose_a_image">Choose a Image</string>
    <string name="miniature_name">Miniature Name</string>
    <string name="how_many_units">How many Units ?</string>
    <string name="add_miniature">Add Miniature</string>
    <string name="miniature_name_project_tiem">Miniature Name</string>
    <string name="amount">Amount:</string>
    <string name="from">from</string>
    <string name="count_up">add to the taskbar one finished miniature</string>
    <string name="new_project">New Project</string>
    <string name="choose_a_image_for_your_project">Choose a Image for your Project</string>
    <string name="project_name">Project Name</string>
    <string name="project_description">Project Description</string>
    <string name="how_many_minatures_has_youre_project">How many Minatures has youre Project ?</string>
    <string name="create">Create</string>
    <string name="enter_password">Enter password</string>
    <string name="confirm_your_password">Confirm your password</string>

</resources>