<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/md_theme_background_mediumContrast"
    tools:context=".ui.HomeFragment.HomeFragment">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="left"
        android:layout_marginLeft="48dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/welcomeTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/md_theme_onBackground"
            android:layout_gravity="left"
            android:text="@string/welcome" />

        <TextView
            android:id="@+id/usernameTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/md_theme_onBackground"
            android:layout_gravity="left"
            android:text="@string/username" />


    </LinearLayout>

    <TextView
        android:id="@+id/lastViewedColoursTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:textAppearance="@style/SubHeadline"
        android:textColor="@color/md_theme_onBackground"
        android:layout_marginBottom="8dp"
        android:text="@string/lastWishedColours" />


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recentColoursRecyclerView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="16dp"
        android:orientation="horizontal"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        tools:itemCount="5"
        tools:listitem="@layout/last_view_colour_item">

    </androidx.recyclerview.widget.RecyclerView>

<TextView
android:id="@+id/textView"
android:layout_gravity="center"
android:layout_height="wrap_content"
android:layout_marginBottom="32dp"
android:layout_marginTop="32dp"

android:textAppearance="@style/Headline"
    android:layout_width="wrap_content"
android:text="@string/whatsNew" />

<androidx.swiperefreshlayout.widget.SwipeRefreshLayout
    android:id="@+id/swipeRefreshLayout"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:layout_gravity="center">

<androidx.recyclerview.widget.RecyclerView
android:id="@+id/newsRV"
android:layout_gravity="center"
android:layout_height="wrap_content"
android:layout_width="wrap_content"
android:orientation="vertical"
app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
tools:listitem="@layout/news_item">

</androidx.recyclerview.widget.RecyclerView>
</androidx.swiperefreshlayout.widget.SwipeRefreshLayout>

    </LinearLayout>

