<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="32dp"
    android:clipToPadding="false">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="32dp"
        android:orientation="vertical"
        tools:context=".ui.WorkshopFragment.WorkshopCategorie">

        <androidx.cardview.widget.CardView
            android:id="@+id/colour_collectionCV"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:padding="10dp"
            app:cardCornerRadius="20dp"
            app:cardElevation="5dp">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/colour_collectionIV"
                    android:layout_width="wrap_content"
                    android:layout_height="200dp"
                    android:scaleType="centerCrop"
                    android:src="@drawable/colour_collection" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:fontFamily="@font/rowdies_bold"
                    android:text="@string/colour_collection"
                    android:textColor="#000000"
                    android:textSize="20sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:fontFamily="@font/rowdies_light"
                    android:text="@string/have_always_your_collection_with_you"
                    android:textColor="#000000"
                    android:textSize="15sp" />

            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/projectsCV"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="16dp"
            android:padding="10dp"
            app:cardCornerRadius="20dp"
            app:cardElevation="5dp">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/projectsIV"
                    android:layout_width="wrap_content"
                    android:layout_height="200dp"
                    android:scaleType="centerCrop"
                    android:src="@drawable/projects_categorie_image" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:fontFamily="@font/rowdies_bold"
                    android:text="@string/projects"
                    android:textColor="#000000"
                    android:textSize="20sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:fontFamily="@font/rowdies_light"
                    android:text="@string/create_and_manage_your_projects"
                    android:textColor="#000000"
                    android:textSize="15sp" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/wishlistCV"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="16dp"
            android:padding="10dp"
            app:cardCornerRadius="20dp"
            app:cardElevation="5dp">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/wishlistIV"
                    android:layout_width="wrap_content"
                    android:layout_height="200dp"
                    android:scaleType="centerCrop"
                    android:src="@drawable/workshop_categorie_wishlist" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:fontFamily="@font/rowdies_bold"
                    android:text="@string/wishlist"
                    android:textColor="#000000"
                    android:textSize="20sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:fontFamily="@font/rowdies_light"
                    android:text="@string/all_your_missing_colours_in_one_place"
                    android:textColor="#000000"
                    android:textSize="15sp" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>
    </LinearLayout>
</ScrollView>